--- a/index.html
+++ b/index.html
@@ -11,38 +11,62 @@
     <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/ico" />
     <title>Sua Academia</title>
+    <style>
+        /* Custom CSS for enhancements */
+        .navbar {
+            background-color: #343a40;
+        }
+        .navbar-nav .nav-link {
+            color: #fff;
+        }
+        .navbar-nav .nav-link:hover {
+            color: #ffc107;
+        }
+        .modalidades img:hover {
+            transform: scale(1.05);
+            transition: transform 0.3s ease-in-out;
+        }
+        .galeria img:hover {
+            transform: scale(1.1);
+            transition: transform 0.3s ease-in-out;
+        }
+        .form-control::placeholder {
+            font-style: italic;
+        }
+        footer {
+            background-color: #343a40;
+            color: #fff;
+            padding: 20px 0;
+        }
+        footer a {
+            color: #ffc107;
+        }
+    </style>
 </head>
 
 <body>
     <header class="main_header container py-3">
-        <div class="d-flex justify-content-between align-items-center">
-            <a href="index.html" title="Sua Academia">
-                <img src="img/logo.png" alt="Sua Academia" class="img-fluid" />
-            </a>
-            <nav class="d-none d-md-block">
-                <ul class="nav">
-                    <li class="nav-item"><a href="#inicio" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#modalidades" class="nav-link">Modalidades</a></li>
-                    <li class="nav-item"><a href="#galeria" class="nav-link">Galeria</a></li>
-                    <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
-                </ul>
-            </nav>
-            <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo.png" alt="Sua Academia" class="img-fluid" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a href="#inicio" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="#modalidades" class="nav-link">Modalidades</a></li>
+                        <li class="nav-item"><a href="#galeria" class="nav-link">Galeria</a></li>
+                        <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <div class="collapse" id="mobileMenu">
-        <ul class="nav flex-column bg-light p-3">
-            <li class="nav-item"><a href="#inicio" class="nav-link">Início</a></li>
-            <li class="nav-item"><a href="#modalidades" class="nav-link">Modalidades</a></li>
-            <li class="nav-item"><a href="#galeria" class="nav-link">Galeria</a></li>
-            <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
-        </ul>
-    </div>
-
-    <main class="container mt-4">
+    <main class="container mt-5 pt-5">
         <section id="inicio" class="text-center py-5 bg-dark text-white">
             <h1>VOCÊ FITNESS</h1>
             <p>Seu corpo mais saudável.</p>
@@ -51,7 +75,7 @@
 
         <section id="modalidades" class="py-5">
             <h2 class="text-center text-success">Modalidades</h2>
-            <div class="row mt-4">
+            <div class="row mt-4 modalidades">
                 <div class="col-md-4 text-center">
                     <img src="uploads/modalidades/musculacao.jpg" class="img-fluid" alt="Musculação">
                     <h3>Musculação</h3>
@@ -72,7 +96,7 @@
 
         <section id="galeria" class="py-5 bg-light text-center">
             <h2>Galeria de Fotos</h2>
-            <div class="row mt-4">
+            <div class="row mt-4 galeria">
                 <div class="col-md-3">
                     <img src="uploads/galeria/1.jpg" class="img-fluid rounded shadow" alt="Galeria 1">
                 </div>
@@ -113,6 +137,17 @@
             </div>
         </section>
     </main>
+
+    <footer class="text-center">
+        <div class="container">
+            <p>&copy; 2025 Sua Academia. Todos os direitos reservados.</p>
+            <p>
+                <a href="#">Facebook</a> |
+                <a href="#">Instagram</a> |
+                <a href="#">Twitter</a>
+            </p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
