--- a/index.html
+++ b/index.html
@@ -16,15 +16,26 @@
         .navbar {
             background-color: #343a40;
         }
+        .navbar-brand img {
+            max-height: 50px;
+        }
         .navbar-nav .nav-link {
             color: #fff;
         }
         .navbar-nav .nav-link:hover {
             color: #ffc107;
         }
+        .modalidades img {
+            width: 100%;
+            height: auto;
+        }
         .modalidades img:hover {
             transform: scale(1.05);
             transition: transform 0.3s ease-in-out;
+        }
+        .galeria img {
+            width: 100%;
+            height: auto;
         }
         .galeria img:hover {
             transform: scale(1.1);
@@ -140,7 +151,7 @@
 
     <footer class="text-center">
         <div class="container">
-            <p>&copy; 2025 Sua Academia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Bruno Bertin. Todos os direitos reservados.</p>
             <p>
                 <a href="#">Facebook</a> |
                 <a href="#">Instagram</a> |
